# krish-agent

./: .gitignore  COMPLETE_PUBLISHING_SUMMARY.md  EXACT_COMMANDS.txt  FINAL_BUILD.sh  FIX_AND_PUBLISH.sh  GITHUB_SETUP.md  GODMODE_DEPLOYMENT.md  GODMODE_FEATURES.md  GODMODE_GUIDE.md  HOW_TO_PUBLISH.txt  IMPLEMENTATION_GUIDE.md  INDEX.md  INSTALL.md  INSTALL_AND_PUBLISH.sh  MAC_TERMINAL_GUIDE.md  PACKAGE_STRUCTURE.md  PUBLISH_NOW.sh  PUBLISH_TO_PYPI.md  PUSH_TO_GITHUB.txt  QUICKSTART.md  QUICK_PUBLISH.sh  README.md  README_GODMODE.md  RELEASE_NOTES.md  START_HERE.md  ULTIMATE_INFINITY_GUIDE.md  VERSION_INFINITY.md  cli.py  demo_godmode.py  example_test_output.py  pyproject.toml  pyproject.toml.bak  reviewer.py  setup.py  worker.py
krish-agent-2.0.0/: PKG-INFO  README.md  setup.py
krish-agent-2.0.0/krish_agent/: __init__.py  chat.py  cli.py  code_generator.py  prompts.py  reviewer.py  tools.py  ultimate_features.py  worker.py
krish_agent/: advanced_features.py  cli.py  enterprise.py  godmode.py  godmode_integration.py  hyperinfinity.py  memory.py  quantum_universe.py
